--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <h3 style ="margin-top:60px">Log In</h3>
                 <p>Enter your credentials to access your account</p>
                 <button class="btn" style="width:400px;padding-left: 30px;">
-                    <img src="\logo1.jpg" height="20px" width="20px">
+                    <img src="https://st3.depositphotos.com/1050070/13243/i/950/depositphotos_132435332-stock-photo-google-logo-on-pc-screen.jpg" height="20px" width="20px">
                     &nbsp;Log in with Google
                 </button>
                 <p style="color:grey; padding-top: 20px;">__________________________or_______________________________</p>
@@ -53,7 +53,7 @@
             <h3 style="margin-top:60px;margin-left:50px;">Donec aliquim ex sed neque eleifriend</h3>
             <p style="margin-left:80px;">Donec aliquim ex sed neque eleifriend</p>
 
-            <img src="\full.jpg" height="570px" width="710px"></td>
+            <img src="https://cdn.dribbble.com/users/2671670/screenshots/17306703/media/1c2864ce9b79c5467c356368c12e6f00.png?compress=1&resize=1200x900&vertical=top" height="570px" width="710px"></td>
         </tr>
         </table>
             </div>
